mpfr_v_utils.h

inline static void set_retval (int retval) {
    mpfr_ternary_retval = retval;
}